--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,9 @@
 body{
     background-color: rgb(204, 157, 248);
 }
-
+img.lado{
+    float: right;
+}
 main{
     background-color: white;
     width: 500px;
